--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "reselect": "^3.0.1"
   },
   "devDependencies": {
+    "node-sass-chokidar": "0.0.1",
+    "npm-run-all": "^4.0.2",
     "react-scripts": "1.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
