--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
     "reselect": "^3.0.1"
   },
   "devDependencies": {
