--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "standard": "^10.0.2"
   },
   "devDependencies": {
     "node-sass-chokidar": "0.0.1",
