--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
     "standard": "^10.0.2"
   },
