Adds font-awesome

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "nskeymirror": "^0.1.2",
     "ramda": "^0.23.0",
