--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-redux": "^4.0.8",
     "recompose": "^0.23.4",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
